<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.bilalmirza.noteit.ui.fragments.update.UpdateNoteFragment">

    <TextView
        android:id="@+id/addNoteHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/UpdateNoteFragment_header"
        android:textColor="@color/orange"
        android:textSize="24sp"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:id="@+id/saveNoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/addNoteHeader"
        android:layout_alignBottom="@+id/addNoteHeader"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="6dp"
        android:contentDescription="@string/AddNoteFragment_contentDescription"
        android:src="@drawable/baseline_done_24"
        tools:ignore="RedundantDescriptionCheck" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/addNoteHeader"
        android:layout_marginTop="17dp"
        android:background="@drawable/orange_border"
        android:fontFamily="@font/poppins"
        android:hint="@string/UpdateNoteFragment_noteTitleHint"
        android:importantForAutofill="no"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="20sp"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/UpdateNoteFragment_noteContentHint"
        android:gravity="top"
        android:padding="12dp"
        android:textSize="18sp"
        android:fontFamily="@font/poppins"
        android:background="@drawable/orange_border"
        android:layout_below="@+id/title"
        android:layout_marginTop="14dp"
        android:importantForAutofill="no"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <ImageView
        android:id="@+id/deleteNoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/saveNoteButton"
        android:layout_alignBottom="@+id/saveNoteButton"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="0dp"
        android:layout_toStartOf="@+id/saveNoteButton"
        android:contentDescription="@string/UpdateNoteFragment_contentDescription"
        android:src="@drawable/baseline_remove_circle_24"
        app:tint="@color/orange"
        tools:ignore="RedundantDescriptionCheck" />

</RelativeLayout>